Fix buttons vertical alignment in operations list (fix #816)

--- a/client/css/ui/tables.css
+++ b/client/css/ui/tables.css
@@ -110,6 +110,14 @@ table caption .actions > :last-child {
     margin-right: 0;
 }
 
+table caption .actions > .btn > * {
+    vertical-align: top;
+}
+
+table caption .actions > .btn > .fa:not(:only-child) {
+    margin-top: -0.125em;
+}
+
 table caption .actions .fa {
     font-size: 1.25em;
 }
